Firebase does not like linkedlists either